# Qt6_study

study01/: CMakeLists.txt  main.cpp
